funcmap_tests/tests/ui/conflict/drop_fallible.stderr
error[E0119]: conflicting implementations of trait `TryFuncMap_cannot_be_derived_for_types_implementing_Drop` for type `Test<_, _>`
 --> tests/ui/conflict/drop_fallible.rs:4:8
  |
4 | struct Test<S, T>(S, T);
  |        ^^^^
  |
  = note: conflicting implementation in crate `funcmap`:
          - impl<T> TryFuncMap_cannot_be_derived_for_types_implementing_Drop for T
            where T: Drop, T: ?Sized;
